--- a/NuclearEvaluation.Server/NuclearEvaluation.Server.csproj
+++ b/NuclearEvaluation.Server/NuclearEvaluation.Server.csproj
@@ -16,8 +16,11 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.HeaderPropagation" Version="9.0.1" />
-		<PackageReference Include="Microsoft.AspNetCore.OData" Version="9.1.3" />
-		<PackageReference Include="Radzen.Blazor" Version="5.7.6" />
+		<PackageReference Include="Microsoft.AspNetCore.OData" Version="9.2.0" />
+		<PackageReference Include="Polly" Version="8.5.2" />
+		<PackageReference Include="Radzen.Blazor" Version="5.9.8" />
+		<PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
+		<PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
 		<PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="9.103.7" />
 	</ItemGroup>
 	<ItemGroup>
