--- a/NuclearEvaluation.Server/NuclearEvaluation.Server.csproj
+++ b/NuclearEvaluation.Server/NuclearEvaluation.Server.csproj
@@ -9,6 +9,8 @@
 	<ItemGroup>
 		<PackageReference Include="CsvHelper" Version="33.0.1" />
 		<PackageReference Include="FluentValidation" Version="11.11.0" />
+		<PackageReference Include="linq2db" Version="5.4.1" />
+		<PackageReference Include="linq2db.EntityFrameworkCore" Version="9.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.1">
 			<PrivateAssets>all</PrivateAssets>
