--- a/NuclearEvaluation.Library/NuclearEvaluation.Library.csproj
+++ b/NuclearEvaluation.Library/NuclearEvaluation.Library.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="linq2db" Version="5.4.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.1">
 		  <PrivateAssets>all</PrivateAssets>
