stem preview progress

--- a/NuclearEvaluation.Library/NuclearEvaluation.Library.csproj
+++ b/NuclearEvaluation.Library/NuclearEvaluation.Library.csproj
@@ -20,4 +20,8 @@
 	  <ProjectReference Include="..\..\..\..\Desktop\Kerajel.Primitives\Kerajel.Primitives\Kerajel.Primitives\Kerajel.Primitives.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Models\Temporary\" />
+	</ItemGroup>
+
 </Project>
