some progress on stem preview upload

--- a/NuclearEvaluation.Server/NuclearEvaluation.Server.csproj
+++ b/NuclearEvaluation.Server/NuclearEvaluation.Server.csproj
@@ -43,5 +43,8 @@
 	    <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
 	  </Content>
 	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="wwwroot\files\stem-preview\" />
+	</ItemGroup>
 
 </Project>
