--- a/NuclearEvaluation.Library/NuclearEvaluation.Library.csproj
+++ b/NuclearEvaluation.Library/NuclearEvaluation.Library.csproj
@@ -7,12 +7,21 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="linq2db" Version="5.4.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.1">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Radzen.Blazor" Version="5.7.6" />
+		<PackageReference Include="Radzen.Blazor" Version="5.9.8" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\..\..\Desktop\Kerajel.Primitives\Kerajel.Primitives\Kerajel.Primitives\Kerajel.Primitives.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Models\Temporary\" />
 	</ItemGroup>
 
 </Project>
