--- a/NuclearEvaluation.Server/NuclearEvaluation.Server.csproj
+++ b/NuclearEvaluation.Server/NuclearEvaluation.Server.csproj
@@ -7,7 +7,10 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 	<ItemGroup>
+		<PackageReference Include="CsvHelper" Version="33.0.1" />
 		<PackageReference Include="FluentValidation" Version="11.11.0" />
+		<PackageReference Include="linq2db" Version="5.4.1" />
+		<PackageReference Include="linq2db.EntityFrameworkCore" Version="9.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.1">
 			<PrivateAssets>all</PrivateAssets>
@@ -16,11 +19,15 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.HeaderPropagation" Version="9.0.1" />
-		<PackageReference Include="Microsoft.AspNetCore.OData" Version="9.1.3" />
-		<PackageReference Include="Radzen.Blazor" Version="5.7.6" />
+		<PackageReference Include="Microsoft.AspNetCore.OData" Version="9.2.0" />
+		<PackageReference Include="Polly" Version="8.5.2" />
+		<PackageReference Include="Radzen.Blazor" Version="5.9.8" />
+		<PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
+		<PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
 		<PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="9.103.7" />
 	</ItemGroup>
 	<ItemGroup>
+	  <ProjectReference Include="..\..\..\..\Desktop\Kerajel.TabularDataReader\Kerajel.TabularDataReader\Kerajel.TabularDataReader.csproj" />
 	  <ProjectReference Include="..\NuclearEvaluation.Library\NuclearEvaluation.Library.csproj" />
 	</ItemGroup>
 	<ItemGroup>
@@ -32,6 +39,12 @@
 	  <Content Update="Shared\Grids\ParticleGrid.razor">
 	    <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
 	  </Content>
+	  <Content Update="Shared\Grids\StemPreviewEntryGrid.razor">
+	    <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+	  </Content>
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="wwwroot\files\stem-preview\" />
 	</ItemGroup>
 
 </Project>
