current progress on rabbit mq

--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,4 @@ FodyWeavers.xsd
 /NuclearEvaluation.Server/wwwroot/files/stem-preview/blank-stem-preview-template.xlsx
 /NuclearEvaluation.Server/wwwroot/files/stem-preview/populated-stem-preview-file-1048567-rows.xlsx
 /NuclearEvaluation.Server/wwwroot/files/stem-preview/populated-stem-preview-file-350000-rows.xlsx
+/NuclearEvaluationStorage/9a48e234-f72a-4032-b2ee-163e7af80654
