--- a/.gitignore
+++ b/.gitignore
@@ -368,3 +368,5 @@ FodyWeavers.xsd
 /NuclearEvaluation.Server/wwwroot/files/stem-preview/populated-stem-preview-file-1048567-rows.xlsx
 /NuclearEvaluation.Server/wwwroot/files/stem-preview/populated-stem-preview-file-350000-rows.xlsx
 /NuclearEvaluationStorage/9a48e234-f72a-4032-b2ee-163e7af80654
+/NuclearEvaluation.Server/rabbitMqSettings.json
+/NuclearEvaluationStorage
