progess on rabbit

--- a/NuclearEvaluation.Server/stemSettings.json
+++ b/NuclearEvaluation.Server/stemSettings.json
@@ -1,5 +1,7 @@
 {
   "StemSettings": {
-    "MaxPreviewFileSize": 52428800 // 50 mb
+    "MaxPreviewFileSize": 52428800,
+    "ProcessingQueueName" : "StemPreviewProcessingQueue",
+    "ResponseQueueName" : "StemPreviewResponseQueue"
   }
 }
