current progress on rabbit mq

--- a/.gitignore
+++ b/.gitignore
@@ -370,3 +370,4 @@ FodyWeavers.xsd
 /NuclearEvaluationStorage/9a48e234-f72a-4032-b2ee-163e7af80654
 /NuclearEvaluation.Server/rabbitMqSettings.json
 /NuclearEvaluationStorage
+/Kerajel.StemPreviewProcessor/rabbitMqSettings.json
