--- a/NuclearEvaluation.Server/stemSettings.json
+++ b/NuclearEvaluation.Server/stemSettings.json
@@ -1,7 +1,8 @@
 {
   "StemSettings": {
     "MaxPreviewFileSize": 52428800,
-    "ProcessingQueueName" : "StemPreviewProcessingQueue",
-    "ResponseQueueName" : "StemPreviewResponseQueue"
+    "ProcessingExchangeRoutingKey": "37cc9c05-49f8-4c92-9133-79378759fdec",
+    "ProcessingExchangeName": "StemPreviewProcessingExchange",
+    "ResponseQueueName": "StemPreviewResponseQueue"
   }
 }
