--- a/NuclearEvaluation.Tests/NuclearEvaluation.Tests.csproj
+++ b/NuclearEvaluation.Tests/NuclearEvaluation.Tests.csproj
@@ -31,6 +31,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\NuclearEvaluation.Kernel\NuclearEvaluation.Kernel.csproj" />
 		<ProjectReference Include="..\NuclearEvaluation.Library\NuclearEvaluation.Kernel.csproj" />
 		<ProjectReference Include="..\NuclearEvaluation.Server\NuclearEvaluation.Server.csproj" />
 	</ItemGroup>
