--- a/NuclearEvaluation.Kernel/NuclearEvaluation.Kernel.csproj
+++ b/NuclearEvaluation.Kernel/NuclearEvaluation.Kernel.csproj
@@ -9,7 +9,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.1" />
+		<PackageReference Include="Microsoft.AspNetCore.HeaderPropagation" Version="9.0.1" />
+		<PackageReference Include="Microsoft.AspNetCore.OData" Version="9.2.0" />
 		<PackageReference Include="linq2db" Version="5.4.1" />
+		<PackageReference Include="Polly" Version="8.5.2" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.1">
 			<PrivateAssets>all</PrivateAssets>
@@ -24,6 +29,7 @@
 
 	<ItemGroup>
 		<Folder Include="Models\Temporary\" />
+		<Folder Include="DbContext\" />
 	</ItemGroup>
 
 </Project>
