--- a/NuclearEvaluation.SharedServices/NuclearEvaluation.SharedServices.csproj
+++ b/NuclearEvaluation.SharedServices/NuclearEvaluation.SharedServices.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Platforms>AnyCPU;x86</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
