--- a/NuclearEvaluation.StemPreviewProcessor/appsettings.json
+++ b/NuclearEvaluation.StemPreviewProcessor/appsettings.json
@@ -1,8 +1,15 @@
 {
   "Logging": {
+    "Console": {
+      "IncludeScopes": true
+    },
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NuclearEvaluationServerDbConnection": "Server=localhost;Connection Timeout=30;Command Timeout=30;Persist Security Info=False;TrustServerCertificate=True;Integrated Security=True;Initial Catalog=NuclearEvaluationServer;MultipleActiveResultSets=True;"
   }
 }
