solution clean up

--- a/NuclearEvaluation.Kernel/NuclearEvaluation.Kernel.csproj
+++ b/NuclearEvaluation.Kernel/NuclearEvaluation.Kernel.csproj
@@ -24,7 +24,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\..\..\Desktop\Kerajel.Primitives\Kerajel.Primitives\Kerajel.Primitives\Kerajel.Primitives.csproj" />
+	  <ProjectReference Include="..\..\Kerajel.Primitives\Kerajel.Primitives\Kerajel.Primitives\Kerajel.Primitives.csproj" />
 	</ItemGroup>
 
 </Project>
