--- a/NuclearEvaluation.SharedServices/NuclearEvaluation.SharedServices.csproj
+++ b/NuclearEvaluation.SharedServices/NuclearEvaluation.SharedServices.csproj
@@ -15,7 +15,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\..\..\Desktop\Kerajel.TabularDataReader\Kerajel.TabularDataReader\Kerajel.TabularDataReader.csproj" />
+		<ProjectReference Include="..\..\Kerajel.TabularDataReader\Kerajel.TabularDataReader\Kerajel.TabularDataReader.csproj" />
 		<ProjectReference Include="..\NuclearEvaluation.Kernel\NuclearEvaluation.Kernel.csproj" />
 	</ItemGroup>
 
