--- a/NuclearEvaluation.Server/NuclearEvaluation.Server.csproj
+++ b/NuclearEvaluation.Server/NuclearEvaluation.Server.csproj
@@ -5,8 +5,6 @@
 		<TargetFramework>net9.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
-		<PlatformTarget>x86</PlatformTarget>
-		<Platforms>AnyCPU;x86</Platforms>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="CsvHelper" Version="33.0.1" />
@@ -30,6 +28,7 @@
 		<PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="9.103.7" />
 	</ItemGroup>
 	<ItemGroup>
+		<ProjectReference Include="..\..\Kerajel.Primitives\Kerajel.Primitives\Kerajel.Primitives\Kerajel.Primitives.csproj" />
 		<ProjectReference Include="..\NuclearEvaluation.Kernel\NuclearEvaluation.Kernel.csproj" />
 		<ProjectReference Include="..\NuclearEvaluation.SharedServices\NuclearEvaluation.SharedServices.csproj" />
 	</ItemGroup>
