solution clean up

--- a/src/NuclearEvaluation.Server/NuclearEvaluation.Server.csproj
+++ b/src/NuclearEvaluation.Server/NuclearEvaluation.Server.csproj
@@ -46,7 +46,7 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\..\..\Kerajel.Primitives\Kerajel.Primitives\Kerajel.Primitives\Kerajel.Primitives.csproj" />
 	  <ProjectReference Include="..\NuclearEvaluation.Kernel\NuclearEvaluation.Kernel.csproj" />
-	  <ProjectReference Include="..\NuclearEvaluation.SharedServices\NuclearEvaluation.Shared.csproj" />
+	  <ProjectReference Include="..\NuclearEvaluation.Shared\NuclearEvaluation.Shared.csproj" />
 	</ItemGroup>
 
 </Project>
