--- a/src/NuclearEvaluation.Server/NuclearEvaluation.Server.csproj
+++ b/src/NuclearEvaluation.Server/NuclearEvaluation.Server.csproj
@@ -21,6 +21,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.HeaderPropagation" Version="9.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.OData" Version="9.2.0" />
 		<PackageReference Include="Polly" Version="8.5.2" />
+		<PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
 		<PackageReference Include="Radzen.Blazor" Version="5.9.8" />
 		<PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
 		<PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
