--- a/src/NuclearEvaluation.HangfireJobs/NuclearEvaluation.HangfireJobs.csproj
+++ b/src/NuclearEvaluation.HangfireJobs/NuclearEvaluation.HangfireJobs.csproj
@@ -9,6 +9,7 @@
 	<ItemGroup>
 		<PackageReference Include="Hangfire" Version="1.8.18" />
 		<PackageReference Include="Hangfire.AspNetCore" Version="1.8.18" />
+		<PackageReference Include="linq2db.EntityFrameworkCore" Version="9.0.0" />
 		<PackageReference Include="Hangfire.SqlServer" Version="1.8.18" />
 		<PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
 		<PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
