--- a/src/NuclearEvaluation.HangfireJobs/NuclearEvaluation.HangfireJobs.csproj
+++ b/src/NuclearEvaluation.HangfireJobs/NuclearEvaluation.HangfireJobs.csproj
@@ -11,8 +11,9 @@
 		<PackageReference Include="Hangfire.AspNetCore" Version="1.8.18" />
 		<PackageReference Include="linq2db.EntityFrameworkCore" Version="9.0.0" />
 		<PackageReference Include="Hangfire.SqlServer" Version="1.8.18" />
+		<PackageReference Include="MassTransit" Version="8.4.0" />
+		<PackageReference Include="MassTransit.RabbitMQ" Version="8.4.0" />
 		<PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
-		<PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
 		<PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="9.103.7" />
 
 	</ItemGroup>
