--- a/.gitignore
+++ b/.gitignore
@@ -374,3 +374,4 @@ FodyWeavers.xsd
 /Kerajel.NuclearEvaluation/src/NuclearEvaluationStorage/
 /src/NuclearEvaluation.Server/appsettings.Development.json
 /src/NuclearEvaluation.HangfireJobs/appsettings.Development.json
+/src/NuclearEvaluation.HangfireJobs/rabbitMqSettings.json
