progress on PMI reports

--- a/src/NuclearEvaluation.HangfireJobs/PmiReportDistributionSettings.json
+++ b/src/NuclearEvaluation.HangfireJobs/PmiReportDistributionSettings.json
@@ -2,12 +2,10 @@
   "PmiReportDistributionSettings": {
     "DistributionMap": {
       "Email": {
-        "Exchange": "PmiReportDistributionEmailExchange",
-        "RoutingKey": "99556936-b007-4f05-8637-d3940d91597b"
+        "Exchange": "PmiReportDistributionEmailExchange"
       },
       "SharePoint": {
-        "Exchange": "PmiReportDistributionSharePointExchange",
-        "RoutingKey": "5f65e089-933c-47e6-bf80-8ee425e8ea7a"
+        "Exchange": "PmiReportDistributionSharePointExchange"
       }
     }
   }
