--- a/src/NuclearEvaluation.Server/NuclearEvaluation.Server.csproj
+++ b/src/NuclearEvaluation.Server/NuclearEvaluation.Server.csproj
@@ -30,7 +30,7 @@
 	</ItemGroup>
 	<ItemGroup>
 		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
-			<_Parameter1>NuclearEvaluation.Tests</_Parameter1>
+			<_Parameter1>NuclearEvaluation.Server.Tests</_Parameter1>
 		</AssemblyAttribute>
 	</ItemGroup>
 	<ItemGroup>
