--- a/tests/NuclearEvaluation.Server.Tests/NuclearEvaluation.Server.Tests.csproj
+++ b/tests/NuclearEvaluation.Server.Tests/NuclearEvaluation.Server.Tests.csproj
@@ -22,6 +22,7 @@
 		<PackageReference Include="Microsoft.JSInterop" Version="9.0.1" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
 		<PackageReference Include="Radzen.Blazor" Version="5.9.8" />
+		<PackageReference Include="Respawn" Version="6.2.1" />
 		<PackageReference Include="Shouldly" Version="4.3.0" />
 		<PackageReference Include="xunit" Version="2.9.3" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="3.0.1">
