--- a/src/NuclearEvaluation.HangfireJobs/NuclearEvaluation.HangfireJobs.csproj
+++ b/src/NuclearEvaluation.HangfireJobs/NuclearEvaluation.HangfireJobs.csproj
@@ -15,6 +15,9 @@
 		<PackageReference Include="MassTransit.RabbitMQ" Version="8.4.0" />
 		<PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
 		<PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="9.103.7" />
+		<PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
+		<PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+		<PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
 
 	</ItemGroup>
 
