--- a/.gitignore
+++ b/.gitignore
@@ -375,3 +375,4 @@ FodyWeavers.xsd
 /src/NuclearEvaluation.Server/appsettings.Development.json
 /src/NuclearEvaluation.HangfireJobs/appsettings.Development.json
 /src/NuclearEvaluation.HangfireJobs/rabbitMqSettings.json
+/src/NuclearEvaluationStorage/37e92cba-3541-403b-9fa8-99f441927d0e
