--- a/src/NuclearEvaluation.Server/NuclearEvaluation.Server.csproj
+++ b/src/NuclearEvaluation.Server/NuclearEvaluation.Server.csproj
@@ -9,6 +9,7 @@
 	<ItemGroup>
 		<PackageReference Include="CsvHelper" Version="33.0.1" />
 		<PackageReference Include="FluentValidation" Version="11.11.0" />
+		<PackageReference Include="Humanizer" Version="2.14.1" />
 		<PackageReference Include="linq2db" Version="5.4.1" />
 		<PackageReference Include="linq2db.EntityFrameworkCore" Version="9.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
