--- a/src/NuclearEvaluation.PmiReportDistributionCoordinator/PmiReportDistributionSettings.json
+++ b/src/NuclearEvaluation.PmiReportDistributionCoordinator/PmiReportDistributionSettings.json
@@ -7,6 +7,7 @@
       "SharePoint": {
         "Exchange": "PmiReportDistributionSharePointExchange"
       }
-    }
+    },
+    "ReplyQueueName": "TODO"
   }
 }
