project clean up

--- a/.gitignore
+++ b/.gitignore
@@ -378,3 +378,4 @@ FodyWeavers.xsd
 /src/NuclearEvaluationStorage/37e92cba-3541-403b-9fa8-99f441927d0e
 /src/NuclearEvaluationStorage
 /src/NuclearEvaluation.PmiReportDistributionCoordinator/rabbitMqSettings.json
+/src/NuclearEvaluation.PmiReportDistributionCoordinator/appsettings.Development.json
