NuclearEvaluation.PmiReportDistributionCoordinator clean up

--- a/src/NuclearEvaluation.PmiReportDistributionCoordinator/PmiReportDistributionSettings.json
+++ b/src/NuclearEvaluation.PmiReportDistributionCoordinator/PmiReportDistributionSettings.json
@@ -8,6 +8,6 @@
         "Exchange": "PmiReportDistributionSharePointExchange"
       }
     },
-    "ReplyQueueName": "TODO"
+    "ReplyQueueName": "PmiReportDistributionReplyQueue"
   }
 }
