--- a/.gitignore
+++ b/.gitignore
@@ -379,3 +379,4 @@ FodyWeavers.xsd
 /src/NuclearEvaluationStorage
 /src/NuclearEvaluation.PmiReportDistributionCoordinator/rabbitMqSettings.json
 /src/NuclearEvaluation.PmiReportDistributionCoordinator/appsettings.Development.json
+/src/NuclearEvaluation.PmiReportEmailDistributor/rabbitMqSettings.json
