--- a/.gitignore
+++ b/.gitignore
@@ -380,3 +380,4 @@ FodyWeavers.xsd
 /src/NuclearEvaluation.PmiReportDistributionCoordinator/rabbitMqSettings.json
 /src/NuclearEvaluation.PmiReportDistributionCoordinator/appsettings.Development.json
 /src/NuclearEvaluation.PmiReportEmailDistributor/rabbitMqSettings.json
+/src/NuclearEvaluation.PmiReportEmailDistributor/appsettings.Development.json
