--- a/src/NuclearEvaluation.PmiReportEmailDistributor/PmiReportDistributionSettings.json
+++ b/src/NuclearEvaluation.PmiReportEmailDistributor/PmiReportDistributionSettings.json
@@ -1,3 +1,5 @@
 {
-  "ConsumeQueueName": "PmiReportDistributionEmailQueue"
+  "PmiReportDistributionSettings": {
+    "ConsumeQueueName": "PmiReportDistributionEmailQueue"
+  }
 }
