progress on NuclearEvaluation.PmiReportEmailDistributor

--- a/src/NuclearEvaluation.PmiReportEmailDistributor/NuclearEvaluation.PmiReportEmailDistributor.csproj
+++ b/src/NuclearEvaluation.PmiReportEmailDistributor/NuclearEvaluation.PmiReportEmailDistributor.csproj
@@ -16,6 +16,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\..\Kerajel.Primitives\Kerajel.Primitives\Kerajel.Primitives\Kerajel.Primitives.csproj" />
+		<ProjectReference Include="..\..\NuclearEvaluation.Messaging\NuclearEvaluation.Messaging.csproj" />
 		<ProjectReference Include="..\..\NuclearEvaluation.PmiReportDistributionContracts\NuclearEvaluation.PmiReportDistributionContracts.csproj" />
 	</ItemGroup>
 
