--- a/src/NuclearEvaluation.PmiReportEmailDistributor/PmiReportDistributionSettings.json
+++ b/src/NuclearEvaluation.PmiReportEmailDistributor/PmiReportDistributionSettings.json
@@ -1,5 +1,6 @@
 {
   "PmiReportDistributionSettings": {
-    "ConsumeQueueName": "PmiReportDistributionEmailQueue"
+    "ConsumeQueueName": "PmiReportDistributionEmailQueue",
+    "ReplyExchangeName": "PmiReportDistributionReplyExchange"
   }
 }
