Kerajel/switch to rabbit mq (#10)
* migration to rabbit mq

--- a/src/NuclearEvaluation.PmiReportEmailDistributor/PmiReportDistributionSettings.json
+++ b/src/NuclearEvaluation.PmiReportEmailDistributor/PmiReportDistributionSettings.json
@@ -1,3 +1,6 @@
 {
-  "ConsumeQueueName": "PmiReportDistributionEmailQueue"
+  "PmiReportDistributionSettings": {
+    "ConsumeQueueName": "PmiReportDistributionEmailQueue",
+    "ReplyExchangeName": "PmiReportDistributionReplyExchange"
+  }
 }
