--- a/src/NuclearEvaluation.PmiReportDistributionCoordinator/NuclearEvaluation.PmiReportDistributionCoordinator.csproj
+++ b/src/NuclearEvaluation.PmiReportDistributionCoordinator/NuclearEvaluation.PmiReportDistributionCoordinator.csproj
@@ -11,17 +11,18 @@
 		<PackageReference Include="Hangfire.AspNetCore" Version="1.8.18" />
 		<PackageReference Include="linq2db.EntityFrameworkCore" Version="9.0.0" />
 		<PackageReference Include="Hangfire.SqlServer" Version="1.8.18" />
-		<PackageReference Include="MassTransit" Version="8.4.0" />
-		<PackageReference Include="MassTransit.RabbitMQ" Version="8.4.0" />
 		<PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
 		<PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="9.103.7" />
 		<PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
 		<PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
 		<PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
 
-	</ItemGroup>
+  </ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\..\NuclearEvaluation.Messaging\NuclearEvaluation.Messaging.csproj" />
+		<ProjectReference Include="..\..\NuclearEvaluation.PmiReportDistributionContracts\NuclearEvaluation.PmiReportDistributionContracts.csproj" />
 		<ProjectReference Include="..\NuclearEvaluation.Kernel\NuclearEvaluation.Kernel.csproj" />
 	</ItemGroup>
 
